index.css
body {
  background: #EBEBEB;
  margin: 0;
  transition: all 2s;
}

header, section, nav {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;

  overflow: scroll;
  padding: 30px;
}

header, section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  z-index: 2;
}

header button, header h1,
section button, section p:first-child {
  margin-top: 100px;
}

nav {
  display: flex;
  align-items: center;
  justify-content: center;
}

body.doneenter header,
body.doneexplore section {
  animation: fadeout 0.5s forwards;
  pointer-events: none;
}

header h1 {
  font-size: 60px;
  margin-bottom: 38px;

  animation: fadeinup 0.5s ease-out backwards;
  animation-delay: 0.25s;
}

header p,
section p {
  max-width: 550px;

  font-size: 20px;
  line-height: 1.6;
  margin-bottom: 38px;
  color: #002E56;

  animation: fadeinup 0.5s ease-out backwards;
  animation-delay: 1.75s;
}

header p:nth-child(3),
section p:nth-child(2) {
  animation-delay: 3.25s;
}

header p:nth-child(4),
section p:nth-child(3) {
  animation-delay: 4.75s;
}

header button,
section button {
  animation: fadeinup 0.5s ease-out backwards;
  animation-delay: 6.25s;
}

body:not(.doneenter) section {
  display: none;
}

#map {
  z-index: 1;
  height: 60vh;
  width: 60vh;
  position: absolute;
  padding: 0;
  perspective: 100px;
}

#framework {
  height: 80vh;
  width: 80vw;
  position: absolute;
  padding: 0;
  pointer-events: none;
  opacity: 0;
  transition: opacity 0.5s;
}

body.doneexplore.showframework #framework {
  opacity: 1;
}

nav li {
  list-style: none;
  position: absolute;
  transform: translate(-50%, -50%);
  background-size: 100% 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 30px;
  box-sizing: border-box;
  transition: all 1s;

  mask-size: contain;
  -webkit-mask-size: contain;
  mask-repeat: no-repeat;
  -webkit-mask-repeat: no-repeat;
  mask-position: center;
  -webkit-mask-position: center;
}

nav a {
  color:  rgba(255, 255, 255, 0);
  font-family: "Averta-Bold";
  font-size: 17px;
  line-height: 1.2;

  text-decoration: none;
}

body.doneexplore nav a {
  color: white;
}

body.doneexplore nav #bubblegivemefairaccess,
body.doneexplore nav #bubblesharingiscaring,
body.doneexplore nav #bubbletakemebythehand {
  color: black;
}

nav #navheader,
#buttons button,
#buttons a.button {
  display: none;
}

body.doneexplore nav #navheader {
  display: inline-block;
  max-width: 400px;
  animation: fadein 2s backwards;
}

body.doneenter #buttons #buttontogglesound,
body.doneexplore #buttons button,
body.doneexplore #buttons a.button {
  display: inline-block;
  animation: fadeinup 0.5s backwards;
  animation-delay: 0.75s;
}

body.doneenter.doneexplore #bubbleisthereanappforthat,
body.doneenter.doneexplore #bubbletakemebythehand,
body.doneenter.doneexplore #bubblesharingiscaring,
body.doneenter.doneexplore #bubbleonmyterms,
body.doneenter.doneexplore #bubbleseethewholeme,
body.doneenter.doneexplore #bubblegivemefairaccess,
body.doneenter.doneexplore #bubblewinbackmytrust {
  animation: nopointerevents 1s;
}

body.doneenter.doneexplore #bubbleisthereanappforthat {
  transform: translate3d(0, 0, 0.1px);
}

body.doneenter.doneexplore #bubbletakemebythehand {
  transform: translate3d(0, 0, 1px);
}

body.doneenter.doneexplore #bubblesharingiscaring {
  transform: translate3d(0, 0, 0.25px);
}

body.doneenter.doneexplore #bubbleonmyterms {
  transform: translate3d(0, 0, 0.5px);
}

body.doneenter.doneexplore #bubbleseethewholeme {
  transform: translate3d(0, 0, 0.75px);
}

body.doneenter.doneexplore #bubblegivemefairaccess {
  transform: translate3d(0, 0, 1.25px);
}

body.doneenter.doneexplore #bubblewinbackmytrust {
  transform: translate3d(0, 0, 1.5px);
}


body.doneenter.doneexplore #bubbleisthereanappforthat:hover,
body.doneenter.doneexplore a:focus #bubbleisthereanappforthat,
body.doneenter.doneexplore #bubbletakemebythehand:hover,
body.doneenter.doneexplore a:focus #bubbletakemebythehand,
body.doneenter.doneexplore #bubblesharingiscaring:hover,
body.doneenter.doneexplore a:focus #bubblesharingiscaring,
body.doneenter.doneexplore #bubbleonmyterms:hover,
body.doneenter.doneexplore a:focus #bubbleonmyterms,
body.doneenter.doneexplore #bubbleseethewholeme:hover,
body.doneenter.doneexplore a:focus #bubbleseethewholeme,
body.doneenter.doneexplore #bubblegivemefairaccess:hover,
body.doneenter.doneexplore a:focus #bubblegivemefairaccess,
body.doneenter.doneexplore #bubblewinbackmytrust:hover,
body.doneenter.doneexplore a:focus #bubblewinbackmytrust {
  transform: translate3d(-4%, -5%, 5px) scale(1.05);
  z-index: 1;
}


#bubbleisthereanappforthat {
  left: 0%;
  top: 69%;
  width: 34%;
  height: 34%;

  transform: translate3d(-100%, -175%, 1px);
}


#bubbletakemebythehand {
  left: 62%;
  top: 35%;
  width: 38%;
  height: 28%;

  transform: translate3d(50%, -250%, 2.5px) scale(2.5);
}

#bubblesharingiscaring {
  left: 16%;
  top: 0%;
  width: 61%;
  height: 34%;

  transform: translate3d(200%, 0%, 1.2px) scale(1.25);
}


#bubbleonmyterms {
  left: 31%;
  top: 65%;
  width: 44%;
  height: 28%;

  transform: translate3d(-200%, 150%, 1.5px) scale(1.5);
}

#bubbleseethewholeme {
  left: 22%;
  top: 25%;
  width: 49%;
  height: 46%;

  transform: translate3d(-200%, -100%, 1.7px) scale(1.75);
}

#bubblegivemefairaccess {
  left: 2%;
  top: 32%;
  width: 30%;
  height: 38%;

  transform: translate3d(-350%, 50%, 1.7px) scale(1.75);
}

#bubblewinbackmytrust {
  left: 65%;
  top: 58%;
  width: 25%;
  height: 23%;

  transform: translate3d(200%, 50%, 1.5px) scale(1.5);
}

body.doneenter #bubbleisthereanappforthat{
  transform: translate3d(-150%, -175%, 0.5px);
}

body.doneenter #bubbletakemebythehand{
  transform: translate3d(0%, -200%, 1.5px);
}

body.doneenter #bubblesharingiscaring{
  transform: translate3d(200%, 0, 0.75px);
}

body.doneenter #bubbleonmyterms{
  transform: translate3d(-150%, 100%, 1.25px);
}

body.doneenter #bubbleseethewholeme{
  transform: translate3d(-150%, -150%, 1px);
}

body.doneenter #bubblegivemefairaccess{
  transform: translate3d(-350%, 50%, 1.5px);
}

body.doneenter #bubblewinbackmytrust {
  transform: translate3d(200%, 50%, 0.5px);
}

body.doneexplore:not(.showframework) #bubbleisthereanappforthat {
  left: -15%;
  top: 84%;
}

body.doneexplore:not(.showframework) #bubbletakemebythehand {
  left: 80%;
  top: 34%;
}

body.doneexplore:not(.showframework) #bubblesharingiscaring {
  left: 16%;
  top: -20%;
}

body.doneexplore:not(.showframework) #bubbleonmyterms {
  left: 31%;
  top: 85%;
}

body.doneexplore:not(.showframework) #bubblegivemefairaccess {
  left: -18%;
  top: 32%;
}

body.doneexplore:not(.showframework) #bubblewinbackmytrust {
  left: 80%;
  top: 73%;
}

#navheader {
  position: absolute;
  top: 0;
  left: 0;
  padding: 50px;
}

#navheader h2 {
  font-size: 36px;
  margin-bottom: 12px;
}

#buttons {
  display: flex;
  z-index: 2;
  position: absolute;
  right: 30px;
  bottom: 30px;
  overflow: hidden;
}

#buttons button,
#buttons a.button {
  margin: 10px;
}

body.doneexplore #buttons #buttonfilter {
  animation-delay: 1s;
}

body.doneexplore #buttons #buttontoggleframework {
  animation-delay: 1.25s;
}

body.doneexplore #buttons #buttondownload {
  animation-delay: 1.5s;
}

@media only screen and (max-width: 1000px) {
  nav {
    display: block;
  }

  #navheader {
    position: relative;
    padding: 0;
  }

  #map {
    height: auto;
    width: auto;
    position: relative;
    padding: 0 0 150px;
  }

  nav li {
    position: relative;
  }

  body.doneexplore #buttons #buttontoggleframework,
  #framework {
    display: none;
  }

  #buttons {
    flex-direction: column;
    align-items: flex-end;
  }

  #bubbleisthereanappforthat,
  #bubbletakemebythehand,
  #bubblesharingiscaring,
  #bubbleonmyterms,
  #bubbleseethewholeme,
  #bubblegivemefairaccess,
  #bubblewinbackmytrust {
    width: auto;
    height: 80vw;
    left: 0;
  }

  #frameworkexplanation {
    display: none;
  }
}

